done algorithm and rernderer